<resources>
    <string name="app_name">PROJECT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resources">Resources</string>
    <string name="projects">Projects</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not registered?</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="confirm_passsword">Confirm passsword</string>
    <string name="already_registered">Already registered?</string>
    <string name="logout">LOGOUT</string>
    <string name="fullname">Full Name</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello">Hello!</string>
    <string name="add_project">Add project</string>
    <string name="finish">Finish</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="project_deadline">Project Deadline</string>
    <string name="choose_date">Choose date</string>
    <string name="date">date</string>
    <string name="activity_name">Activity Name</string>
    <string name="username">Username</string>
    <string name="finished">Finished</string>
    <string name="difficulty">Difficulty</string>
    <string name="add_activity">Add activity</string>
    <string name="the_activities">The activities</string>
    <string name="user_id">User ID</string>
    <string name="project_data">Project Data</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="this_is_triss">This is Triss!</string>
    <string name="download_past_projects">Download past projects</string>
    <string name="project_name">Project Name</string>
    <string name="activities">Activities</string>
    <string name="may_23_2020">May 23, 2020</string>
    <string name="save_report">Save Report</string>
    <string name="this_is_your_profile">This is your profile.</string>
    <string name="this_is_the_home_page">This is the home page!</string>
    <string name="default_username">Default Username</string>
    <string name="default_value_activities">default value activities</string>
    <string name="default_val_projects">default value projects</string>
    <string name="full_name">Full Name</string>
    <string name="update">Update</string>
    <string name="default_fullname">default full name</string>
    <string name="user_activities">User Activities</string>
    <string name="total_projects">Total Projects</string>
    <string name="your_colleagues_location">your colleagues location</string>
    <string name="title_activity_maps">Map</string>
    <string name="pingu">PINGU</string>
    <string name="ACTIVITY_MANAGER">ACTIVITY MANAGER</string>
    <string name="your_activities">Your activities</string>
</resources>