<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_resources"
        android:name="com.example.project.ui.resources.ResourcesFragment"
        android:label="@string/resources"
        tools:layout="@layout/fragment_resources" />

    <fragment
        android:id="@+id/nav_projects"
        android:name="com.example.project.ui.projects.ProjectsFragment"
        android:label="@string/projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.project.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>