<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.project.RegisterActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/penguin_logo"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="250dp"
        android:fontFamily="@font/lato_regular"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:textAlignment="center"
        android:drawableLeft="@drawable/ic_menu_profile"
        android:paddingLeft="10dp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edittext_fullname"
        android:fontFamily="@font/lato_regular"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:textAlignment="center"
        android:drawableLeft="@drawable/ic_menu_profile"
        android:paddingLeft="10dp"
        android:hint="@string/fullname"/>

    <EditText
        android:id="@+id/edittext_email"
        android:fontFamily="@font/lato_regular"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:textAlignment="center"
        android:paddingLeft="10dp"
        android:drawableLeft="@drawable/ic_login_email"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="250dp"
        android:fontFamily="@font/lato_regular"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_login_password"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_login_password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:hint="@string/confirm_passsword"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="250dp"
        android:fontFamily="@font/lato_bold"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:textColor="#ffffff"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:fontFamily="@font/lato_bold"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:fontFamily="@font/lato_black"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/teal_200"
            android:textSize="16sp"
            android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>