<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.project.LoginActivity"
    android:orientation="vertical"
    android:id="@+id/container"
    android:background="@color/yellow"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/penguin_logo"/>
    
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:fontFamily="@font/lato_regular"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/ic_menu_profile"
            android:textAlignment="center"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/edittext_password"
            android:fontFamily="@font/lato_regular"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:textAlignment="center"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_login_password"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:textColor="#ffffff"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:fontFamily="@font/lato_bold"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:fontFamily="@font/lato_black"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/teal_200"
            android:text="@string/register"/>

    </LinearLayout>
</LinearLayout>
