<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/yellow"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_profile_penguin"/>

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/profile_image"
            android:includeFontPadding="false"
            android:text="@string/default_fullname"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvFullName"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/profile_image"
            android:includeFontPadding="false"
            android:text="@string/default_username"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_marginTop="-70dp"
        android:layout_width="match_parent"
        android:padding="20dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            app:cardBackgroundColor="@color/yellow"
            app:cardElevation="10dp">

            <RelativeLayout
                android:id="@+id/cardUserActivities"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:clickable="true"
                android:padding="5dp">

                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:src="@drawable/ic_recycler_view_activities" />

                <TextView
                    android:id="@+id/valActivities"
                    android:includeFontPadding="false"
                    android:textAlignment="center"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/default_value_activities"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/userActivities"
                    android:includeFontPadding="false"
                    android:layout_below="@id/valActivities"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/user_activities"
                    android:textStyle="bold"
                    android:textSize="20sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            app:cardBackgroundColor="@color/yellow"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:src="@drawable/ic_profile_projects" />

                <TextView
                    android:id="@+id/valProjects"
                    android:includeFontPadding="false"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/default_val_projects"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvProjects"
                    android:includeFontPadding="false"
                    android:layout_below="@id/valProjects"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/total_projects"
                    android:textStyle="bold"
                    android:textSize="20sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@color/light_grey"
            android:textAlignment="center"
            android:drawableLeft="@drawable/ic_menu_profile"
            android:paddingLeft="10dp"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/etFullname"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/light_grey"
            android:textAlignment="center"
            android:drawableLeft="@drawable/ic_menu_profile"
            android:paddingLeft="10dp"
            android:hint="@string/fullname"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/light_grey"
            android:textAlignment="center"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_login_email"
            android:hint="@string/email"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:text="@string/update" />

</LinearLayout>